Fixed page selector on mobile

--- a/css/lessframework.css
+++ b/css/lessframework.css
@@ -191,15 +191,7 @@ cols    1     2      3
 px      68    160    252    */
 
 @media only screen and (max-width: 767px) {
-	
-	#nav {
-		display: none;
-	}
-	
-	#comboNav {
-		display: block;
-	}
-	
+
 	.wrapper {
 		width: 252px;
 	}
